# rsa_algorithm

./: .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp  nfc_active_authentication.cpp  nfc_active_authentication.h  resources.qrc  rsa_manager.cpp  rsa_manager.h  rsaalgorithm.cpp  rsaalgorithm.h
resources/: genkey.sh  rsa.private  rsa.public
